Ticket #1958: Style fixes for buttons, update body and header text, and z-index fix for story titles.

--- a/drupal/sites/all/themes/checkdesk/assets/extensions/bowerbird/stylesheets/bowerbird/_buttons.scss
+++ b/drupal/sites/all/themes/checkdesk/assets/extensions/bowerbird/stylesheets/bowerbird/_buttons.scss
@@ -47,11 +47,11 @@ $button-font-weight: 400 !default;
 $button-gradient-style: matte !default;
 $button-invert-on-click: 0 !default;
 $button-font-size: $small-font-size !default;
-$button-color: $firefly60 !default;
+$button-color: $firefly20 !default;
 $button-border-width: 0px !default;
 $button-radius: 3px !default;
 $button-light-text: white !default;
-$button-dark-text: black !default;
+$button-dark-text: $firefly80 !default;
 $button-gradient: 0 !default;
 // Disabled background image support - CGB Nov 2012
 // $button-image-path: image-url("button_bg.png") !default;
