--- a/drupal/sites/all/themes/checkdesk/assets/scss/_create_story.scss
+++ b/drupal/sites/all/themes/checkdesk/assets/scss/_create_story.scss
@@ -20,7 +20,7 @@
     background-color: transparent;
     border: none;
     #edit-submit-story {
-      background: $identity;
+      @include checkdesk-button($identity);
     }
   }
 
